--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "douyin",
     "豆包",
     "小包包",
-    "markdown"
+    "markdown",
+    "graphql"
   ],
   "author": "juzhiqiang",
   "license": "MIT",
@@ -31,7 +32,10 @@
     "lucide-react": "^0.263.1",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
-    "rehype-highlight": "^7.0.0"
+    "rehype-highlight": "^7.0.0",
+    "@apollo/client": "^3.8.7",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
