--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Mastra API Configuration
 VITE_MASTRA_API_URL=http://localhost:4111
 
-# DeepSeek API Configuration (for contract review agent)
+# DeepSeek API Key (for recodeAgent)
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
-# GraphQL API Configuration (existing)
+# GraphQL API Configuration
 VITE_GRAPHQL_ENDPOINT=https://ai-admin.juzhiqiang.shop
