🐛 修复部署问题：添加缺失的依赖和更新API端点
- 修复缺失的 react-router-dom 和 @mastra/client-js 依赖
- 更新 Mastra API 端点为 https://agent.juzhiqiang.shop
- 更新环境变量配置
- 修复 TypeScript 类型错误

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# Mastra API Configuration
-VITE_MASTRA_API_URL=http://localhost:4111
+# Mastra API Configuration (用于合同审核功能)
+VITE_MASTRA_API_URL=https://agent.juzhiqiang.shop
 
-# DeepSeek API Key (for recodeAgent)
-DEEPSEEK_API_KEY=your_deepseek_api_key_here
+# DeepSeek API Key (for recodeAgent - 仅后端使用)
+# DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
-# GraphQL API Configuration
+# GraphQL API Configuration (用于基础对话功能)
 VITE_GRAPHQL_ENDPOINT=https://ai-admin.juzhiqiang.shop
