--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xiao-bao-bao",
   "version": "2.0.0",
-  "description": "🤖 小包包 - 豆包风格的AI对话框组件 (React + TypeScript) 支持流式响应",
+  "description": "🤖 小包包 - 豆包风格的AI对话框组件 (React + TypeScript) 支持流式响应与合同审核",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -26,20 +26,25 @@
     "streaming",
     "sse",
     "realtime",
-    "流式响应"
+    "流式响应",
+    "contract",
+    "review",
+    "mastra"
   ],
   "author": "juzhiqiang",
   "license": "MIT",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.28.0",
     "lucide-react": "^0.263.1",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "rehype-highlight": "^7.0.0",
     "@apollo/client": "^3.8.7",
     "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "@mastra/client-js": "^0.10.20"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
