更新tsconfig.json - 包含vite-env.d.ts和优化编译选项

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,16 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    
+    /* Additional config for better error handling */
+    "exactOptionalPropertyTypes": false,
+    "noImplicitReturns": true,
+    "noUncheckedIndexedAccess": false
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "vite-env.d.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
