--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "build:cloudflare": "tsc && vite build --config vite.config.cloudflare.ts",
+    "build:github": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "preview:cloudflare": "vite preview --config vite.config.cloudflare.ts",
+    "deploy": "npm run build && gh-pages -d dist",
+    "deploy:cloudflare": "npm run build:cloudflare"
   },
   "keywords": [
     "react",
