--- a/package.json
+++ b/package.json
@@ -7,13 +7,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:cloudflare": "bash scripts/build-cloudflare.sh",
-    "build:github": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "preview:cloudflare": "vite preview --config vite.config.cloudflare.ts",
-    "deploy": "npm run build:github && gh-pages -d dist",
-    "deploy:cloudflare": "npm run build:cloudflare"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "keywords": [
     "react",
