docs: 更新环境变量配置示例
- 添加 REACT_APP_MASTRA_BASE_URL 配置项
- 支持新的 @mastra/client-js 库配置
- 统一Mastra服务的URL配置为 agent.juzhiqiang.shop

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Mastra API Configuration (用于合同审核功能)
 VITE_MASTRA_API_URL=https://agent.juzhiqiang.shop
+REACT_APP_MASTRA_BASE_URL=https://agent.juzhiqiang.shop
 
 # DeepSeek API Key (for recodeAgent - 仅后端使用)
 # DEEPSEEK_API_KEY=your_deepseek_api_key_here
