Update .env.example with recodeAgent API configuration

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 VITE_MASTRA_API_URL=https://agent.juzhiqiang.shop
 REACT_APP_MASTRA_BASE_URL=https://agent.juzhiqiang.shop
 
+# RecodeAgent API Configuration (用于旅游规划功能)
+VITE_RECODE_AGENT_API_URL=https://hello-mastra.juzhiqiang.workers.dev
+
 # DeepSeek API Key (for recodeAgent - 仅后端使用)
 # DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
