Add comprehensive environment configuration with troubleshooting guide and Mastra SDK compatibility notes

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,69 @@
-# Mastra API Configuration (用于合同审核功能)
+# 环境变量配置文件
+
+# ================================
+# 基础 API 配置
+# ================================
+
+# GraphQL API 配置 (主要对话功能)
+VITE_GRAPHQL_ENDPOINT=https://ai-admin.juzhiqiang.shop
+
+# Mastra API 配置 (合同审核和旅游规划功能)
 VITE_MASTRA_API_URL=https://agent.juzhiqiang.shop
 REACT_APP_MASTRA_BASE_URL=https://agent.juzhiqiang.shop
 
-# RecodeAgent API Configuration (用于旅游规划功能)
+# RecodeAgent API 配置 (旅游规划功能)
 VITE_RECODE_AGENT_API_URL=https://agent.juzhiqiang.shop
+
+# ================================
+# API Keys (仅后端使用)
+# ================================
 
 # DeepSeek API Key (for recodeAgent - 仅后端使用)
 # DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
-# GraphQL API Configuration (用于基础对话功能)
-VITE_GRAPHQL_ENDPOINT=https://ai-admin.juzhiqiang.shop
+# ================================
+# 开发环境配置 (可选)
+# ================================
+
+# 如果您有本地开发环境，可以取消注释以下配置
+# VITE_MASTRA_API_URL=http://localhost:8000
+# VITE_RECODE_AGENT_API_URL=http://localhost:8000
+# VITE_GRAPHQL_ENDPOINT=http://localhost:4000
+
+# ================================
+# 功能开关 (可选)
+# ================================
+
+# 是否启用调试模式 (显示详细的 API 调用日志)
+VITE_DEBUG_MODE=false
+
+# 是否启用 Fallback 模式 (当 API 不可用时使用模拟数据)
+VITE_ENABLE_FALLBACK=true
+
+# ================================
+# 配置说明
+# ================================
+
+# 1. 生产环境使用：
+#    - 所有 API 地址都指向 https://agent.juzhiqiang.shop
+#    - 这是统一的服务端点，支持合同审核和旅游规划功能
+
+# 2. 开发环境使用：
+#    - 可以将 API 地址改为本地服务器
+#    - 或者继续使用生产环境的 API 进行开发
+
+# 3. 功能说明：
+#    - VITE_GRAPHQL_ENDPOINT: 基础对话和流式响应
+#    - VITE_MASTRA_API_URL: 合同审核功能
+#    - VITE_RECODE_AGENT_API_URL: 旅游规划功能
+#    - 后两者现在都使用同一个地址 (agent.juzhiqiang.shop)
+
+# 4. 故障排除：
+#    - 如果遇到网络问题，检查防火墙设置
+#    - 如果 API 无法访问，系统会自动使用 Fallback 模式
+#    - 查看浏览器控制台获取详细的错误信息
+
+# 5. Mastra SDK 兼容性：
+#    - 系统已添加 @mastra/client-js 导入兼容性处理
+#    - 如果 SDK 导入失败，会自动使用 Fallback 实现
+#    - Fallback 模式提供基本的旅游规划功能
